tests/invalid/undefined_system.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UndefinedSystemRef",
    "description": "Coupling references nonexistent system"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": 1.0
        }
      ]
    }
  },
  "coupling": [
    {
      "type": "variable_map",
      "from": "NonExistentSystem.temperature",
      "to": "TestModel.T",
      "transform": "identity"
    }
  ]
}